Changelog
=========

1.2.2 (unreleased)
------------------

- Nothing changed yet.


1.2.1 (2011-02-03)
------------------

- Fixed ``IndexError`` in formatter which could occur when the path of the
  current working directory was part of the path + file name of the doctest
  file but shorter.


1.2 (2011-01-27)
----------------

- Added support for Manuel_ tests. It gets activated when the package under
  test has tests using `manuel` and this way depends on `manuel`.
  [icemac]

.. _Manuel: http://pypi.python.org/pypi/manuel


1.1 (2011-01-20)
----------------

- Require `zope.testrunner` and remove support for zope.testing 3.7.
  [hannosch]

- Added support for `zope.testrunner` while retaining support for the older
  `zope.testing.testrunner`.
  [hannosch]

- No longer use the deprecated `zope.testing.doctest`.
  [hannosch]

- Distribution metadata cleanup.
  [hannosch]

- Use built-in `xml.etree` in favor of `elementree` in Python 2.5+ and added
  missing dependency on `zc.recipe.egg`.
  [multani]

1.0b3 (2010-06-07)
------------------

* Rename the ``-x`` option ``--xml``. This is necessary by zope.testing now
  uses the ``-x`` option for something else. :-(

1.0b2 (2009-11-08)
------------------

* Maintain compatibility with zope.testing 3.7.

1.0b1 (2009-11-07)
------------------

* Initial release